--- a/index.html
+++ b/index.html
@@ -1612,10 +1612,7 @@
                     </p>
                     
                     <div style="background: #f8f9fa; padding: 40px; border-radius: 10px; margin: 20px 0;">
-                        <div style="background: #ddd; width: 250px; height: 250px; margin: 0 auto; border-radius: 10px; display: flex; align-items: center; justify-content: center; flex-direction: column;">
-                            <span style="color: #999; font-size: 60px;">📱</span>
-                            <span style="color: #666; margin-top: 10px;">https://i.postimg.cc/rsm2KxXN/cgi-bin-mmwebwx-bin-webwxgetmsgimg-Msg-ID-1464314729784592028-skey-crypt-983e3733-ff478c697aa5ce3.jpg</span>
-                        </div>
+                        <img src="https://i.postimg.cc/rsm2KxXN/cgi-bin-mmwebwx-bin-webwxgetmsgimg-Msg-ID-1464314729784592028-skey-crypt-983e3733-ff478c697aa5ce3.jpg" alt="收款二维码" style="width: 250px; height: 250px; margin: 0 auto; border-radius: 10px; display: block;">
                         <p style="margin-top: 20px; color: #666;">微信/支付宝均可</p>
                     </div>
                     
