--- a/index.html
+++ b/index.html
@@ -1663,5 +1663,12 @@
             searchSnakes();
         });
     </script>
+<!-- 不蒜子访问统计 -->
+    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+    
+    <!-- 显示访问量的小窗口 -->
+    <div style="position: fixed; bottom: 10px; right: 10px; background: rgba(0,0,0,0.7); color: white; padding: 5px 10px; border-radius: 5px; font-size: 12px;">
+        👁 <span id="busuanzi_value_site_pv">0</span>
+    </div>
 </body>
 </html>
